improve contact info

--- a/meeting-info.html
+++ b/meeting-info.html
@@ -30,6 +30,7 @@ layout: home
 
                           <br/>
                           <br/>
+                          <p>You can contact our club leader by sending an email to <b>info AT circuit-hackers.org</b></p>
                           <p>You can contact the extension office at: (207) 778-4650.</p>
                         </div>
                     </div>
