updates to project samples

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ _________________________________________________________ -->
                             <div class="box-image-text blog">
                                 <div class="top">
                                     <div class="image">
-                                        <img src="img/portfolio-4.jpg" alt="" class="img-responsive">
+                                        <img src="img/led_project.jpg" alt="" class="img-responsive">
                                     </div>
                                     <div class="bg"></div>
 <!--                                    <div class="text">
@@ -327,7 +327,7 @@ _________________________________________________________ -->
                                     </div> -->
                                 </div>
                                 <div class="content">
-                                    <h4><a href="blog-post.html">Volts, Blink'n Lights, and More</a></h4>
+                                    <h4>Volts, Blink'n Lights, and More</h4>
                                     <!-- <p class="author-category">By <a href="#">John Snow</a> in <a href="blog.html">Webdesign</a> -->
                                     </p>
                                     <p class="intro">We learned the fundamental concepts of electricity, the basics of building a simple circuit, and controlling it with a programmed microcontroller.</p>
@@ -343,7 +343,7 @@ _________________________________________________________ -->
                             <div class="box-image-text blog">
                                 <div class="top">
                                     <div class="image">
-                                        <img src="img/portfolio-3.jpg" alt="" class="img-responsive">
+                                        <img src="img/code.png" alt="" class="img-responsive">
                                     </div>
                                     <div class="bg"></div>
                                     <!--                                    <div class="text">
@@ -353,7 +353,7 @@ _________________________________________________________ -->
                                                                         </div> -->
                                 </div>
                                 <div class="content">
-                                    <h4><a href="blog-post.html">Coding basics: Loops and Conditionals</a></h4>
+                                    <h4>Coding basics: Loops and Conditionals</h4>
                                     <!-- <p class="author-category">By <a href="#">John Snow</a> in <a href="blog.html">Webdesign</a> -->
                                     </p>
                                     <p class="intro">How do you make a program flow? How do you repeat actions/behaviors and make decisions about new ones?</p>
@@ -369,7 +369,7 @@ _________________________________________________________ -->
                             <div class="box-image-text blog">
                                 <div class="top">
                                     <div class="image">
-                                        <img src="img/portfolio-5.jpg" alt="" class="img-responsive">
+                                        <img src="img/ultrasonic_sensor.jpg" alt="" class="img-responsive">
                                     </div>
                                     <div class="bg"></div>
                                     <!--                                    <div class="text">
@@ -379,7 +379,7 @@ _________________________________________________________ -->
                                                                         </div> -->
                                 </div>
                                 <div class="content">
-                                    <h4><a href="blog-post.html">Sensor Explorations</a></h4>
+                                    <h4>Sensor Explorations</h4>
                                     <!-- <p class="author-category">By <a href="#">John Snow</a> in <a href="blog.html">Webdesign</a> -->
                                     </p>
                                     <p class="intro">Electronic sensors give robots the potential to "perceive" the world.  We explored sensors for sound, light, heat, humidity, temperature, motion, and others.</p>
@@ -395,7 +395,7 @@ _________________________________________________________ -->
                             <div class="box-image-text blog">
                                 <div class="top">
                                     <div class="image">
-                                        <img src="img/portfolio-6.jpg" alt="" class="img-responsive">
+                                        <img src="img/obs_project.jpg" alt="" class="img-responsive">
                                     </div>
                                     <div class="bg"></div>
                                     <!--                                    <div class="text">
@@ -405,7 +405,7 @@ _________________________________________________________ -->
                                                                         </div> -->
                                 </div>
                                 <div class="content">
-                                    <h4><a href="blog-post.html">Obstical Avoidance Robot</a></h4>
+                                    <h4>Obstical Avoidance Robot</h4>
                                     <!-- <p class="author-category">By <a href="#">John Snow</a> in <a href="blog.html">Webdesign</a> -->
                                     </p>
                                     <p class="intro">Using the knowledge gained in earlier projects, we built an wheeled-robot that can roam a room, avoiding bumping into furniture and walls.</p>
