--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ layout: home
                             <li class="item">
                                 <div class="testimonial same-height-always">
                                     <div class="text">
-                                        <p>Dale Bryant has been programming and teaching computer science since the 1970's.   Educational research and computer science instruction are his main interests.  More detail is at <a href="www.dbsite.org">www.dbsite.org</a>.</p>
+                                        <p>Dale Bryant has been programming and teaching computer science since the 1970's.   Educational research and computer science instruction are his main interests.  More detail is at <a href="http://www.dbsite.org">www.dbsite.org</a>.</p>
                                     </div>
                                     <div class="bottom">
                                         <div class="icon"><i class="fa fa-quote-left"></i>
@@ -237,7 +237,7 @@ layout: home
                             <li class="item">
                                 <div class="testimonial same-height-always">
                                     <div class="text">
-                                        <p>Started robotics with Lego Mindstorms a few years ago, now loving the hands-on electronics of the Arduino ecosystem.</p>
+                                        <p>I started robotics with Lego Mindstorms a few years ago, and am now loving the hands-on electronics of the Arduino ecosystem.</p>
 
                                     </div>
                                     <div class="bottom">
@@ -254,7 +254,7 @@ layout: home
                             <li class="item">
                                 <div class="testimonial same-height-always">
                                     <div class="text">
-                                        <p>Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
+                                        <p>I enjoy making things do thigs, so I'm looking forward to learning to program and make robots.</p>
                                     </div>
 
                                     <div class="bottom">
@@ -262,7 +262,7 @@ layout: home
                                         </div>
                                         <div class="name-picture">
                                             <img class="" alt="" src="img/rob4.png">
-                                            <h5>Jane</h5>
+                                            <h5>Hana</h5>
                                             <p>Club Member</p>
                                         </div>
                                     </div>
@@ -271,8 +271,7 @@ layout: home
                             <li class="item">
                                 <div class="testimonial same-height-always">
                                     <div class="text">
-                                        <p>Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made
-                                            him feel quite sad.</p>
+                                        <p>I like to learn about different disciplines, and robotics is a great way to do that.</p>
                                     </div>
 
                                     <div class="bottom">
@@ -280,7 +279,7 @@ layout: home
                                         </div>
                                         <div class="name-picture">
                                             <img class="" alt="" src="img/rob5.jpg">
-                                            <h5>Billy</h5>
+                                            <h5>Noah</h5>
                                             <p>Club Member</p>
                                         </div>
                                     </div>
