misc updates for formatting.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ layout: home
 
         <section class="bar background-white">
             <div class="container">
-              <h3>Robotics brings many diciplines into application.  We work to master them all.</h3>
+              <h3>Robotics brings many disciplines into application.  We work to master them all.</h3>
                 <div class="col-md-12">
 
 <!--
@@ -179,7 +179,7 @@ layout: home
                         <h3 class="text-uppercase">Interested in joining our club?</h3>
                         <p class="lead">We meet at the Cooporative Extension Office most Mondays at 4:45pm.</p>
                         <p class="text-center">
-                            <a href="meeting-info.html" class="btn btn-template-transparent-black btn-lg">Click Here For More Info About Attending Our Meetings and Joining Our Club</a>
+                            <a href="meeting-info.html" class="btn btn-template-transparent-black btn-lg">Click Here For Meeting Information</a>
                         </p>
                     </div>
 
