make large logo reactive

--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@ layout: home
             <div class="container">
 
                 <div class="col-md-12">
-                    <img src="img/full-logo-vert.png" class="center-block" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun.">
+                    <img src="img/full-logo-vert.png" class="center-block hidden-xs hidden-sm" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun.">
+                    <img src="img/full-logo-vert-small.png" class="center-block visible-xs visible-sm" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun.">
                     <br/>
                     <div class="heading text-center">
                         <h2>Some of Our Projects</h2>
