--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@ _________________________________________________________ -->
         <div id="get-it">
             <div class="container">
                 <div class="col-md-12">
-                    <h3>We are a 4-H technology and engineering club working through the <a href="https://extension.umaine.edu/franklin/" style="color:#CCC">University of Maine Cooperative Extension</a> in Franklin County.</h3>
+                    <img src="img/4h-logo.png">
+                    <h3>We are a 4-H Technology and Engineering club working through the <a href="https://extension.umaine.edu/franklin/" style="color:#CCC">University of Maine Cooperative Extension</a> in Franklin County.</h3>
                 </div>
 <!--                <div class="col-md-4 col-sm-12">
                     <a href="#" class="btn btn-template-transparent-primary">Buy this template now</a>
